# screenshots

./: README.md  fasten.html  package.json  pnpm-lock.yaml  selection.html  tsconfig.json  vite.config.ts
src/: App.tsx  main.tsx  shortcut.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  tray.rs
src/common/: data.ts
src/fasten/: fasten.css  fasten.tsx
src/lib/: shortcut.ts
src/selection/: index.css  index.html  index.tsx  selection.css  selection.tsx
